--- a/tokyo-night.theme.css
+++ b/tokyo-night.theme.css
@@ -1,7 +1,7 @@
 /**
  * @name Tokyo Night
  * @description Discord Port of Visual Studio Code Theme
- * @author Ashtrath
+ * @author daybot
  * @version 2.0.2
  * @authorId 2354831939099688962
  */
